Fixed layout of RestaurantInfo component - added container - when returned from SearchPage, will now put the results in a container which will prevent it from being cut off - UI changes relating to fixed elements have required the use of a flexible container
- Thatcher Ference <tbf20>

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -493,6 +493,11 @@ h3 {
   margin: 5%;
 }
 
+.restaurant-info {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
 .view-setting label {
   float:left;
   width:40%;
